style.css
body {
    background-color:#d2b48c;
    margin: 0;
    line-height: 30px;
    }

#mainContainer  {
    width: 100%;
    max-height: 100%;
    text-align: center;
    margin: auto;
    
    }

#title  {
    background-color:bisque;
    text-align: center;
    margin: auto;
    max-width: 100%;
    border-radius: 10px;
    box-shadow: 5px 5px 15px rgba(0,0,0,.3);
    height: 30px;
    margin-bottom: 15px;
    }

h1  {
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 300%;
    color:saddlebrown;
    font-weight: bold;
    text-transform: uppercase;
    padding-left: 5%;
    padding-right: 5%;
    text-align: center;
    }

.grid  {
    width: 99%;
    max-width: 100%;
    margin: 0 auto;
    text-align: center;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    border-radius: 10px;
    box-shadow: 5px 5px 15px rgba(0,0,0,.3);
    }
    
    
.row    {
    flex-wrap: nowrap;
    display: flex;
    margin: auto;        
    flex-wrap: wrap;
    justify-content: space-between;
    width: 100%;
    }

.column {
    background-color:peru;
    height: 10%;
    padding: 1rem 0;
    flex: 1;
    gap: 2px;
    
    align-content: center;
    border: 0.5px solid rgb(0, 0, 0);
    display: flex;
    flex-basis: 1;
    font-size: 3em;
    justify-content: center;   
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    color: peru;
    cursor: pointer;
    user-select: none;
    }

.column:hover {
    background-color:sandybrown;
    color:sandybrown;
    }

/*The HTP Modal Close Button*/
.howToPlayClose {
    color: #ff0000;
    float: right;
    font-size: 60px;
    font-weight: bold;
    cursor: pointer;
}


.howToPlayClose:focus {
    color: black;
    text-decoration: none;
    cursor:pointer;
}

/*The winGame Modal Background*/
.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    justify-content: center;
    align-items: center;
    overflow: auto;
    background-color: black;
    background-color: rgba(0,0,0,0.4);
}

/*winGame Modal Content Box*/
.modal-content {
    background-color: tan;
    margin: 15% auto;
    padding: 20px;
    border: 1px solid #888;
    width: 70%;
    align-self: center;
    border-radius: 10px;
    box-shadow: 5px 5px 15px rgba(0,0,0,.3);
}

/*The Mines Switch*/
.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
    margin: auto;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider.round {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
    border-radius: 34px;
}

.slider.round:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
    border-radius: 50%;
}

input:checked + .slider {
    background-color: red;
    }

input:focus + .slider {
    box-shadow: 0 0 1px red;
    }

input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
    }

button {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: medium;
    background-color: peru;
    border-radius: 10px;
    box-shadow: 5px 5px 15px rgba(0,0,0,.3);
    cursor: pointer;
    padding: 1%;
    }

#howToPlayModalBtn {
    display: block;
    background: saddlebrown;
    color: #fff;
    border-radius: 50%;
    width: 30px;
    height: 30px;
    line-height: 10px;
    text-align: center;
    font-size: 20px;
    font-family: Verdana;
    float: right;
    margin-bottom: 10.1rem;
    margin-right: 0.3rem;
}

p   {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 300%;
     color: saddlebrown;
     text-align: center;

    }

p2  {font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
        font-size: 150%;
        color:saddlebrown;
        font-weight: bold;
        text-transform: uppercase;
        padding-left: 5%;
        padding-right: 5%;
        text-align: center;
    }

p3  {
    color: rgb(27, 145, 255);
    }   

div {
    border-width: 3px;
    border-color: black;
    font-size: 70%;
    width: 90%;
    
}

#statusBar {
    width: 100%;
    height: 10%;
    }

#RemainingTurnsCounter  {
    background-color:bisque;
    text-align: center;
    margin: auto;
    height: 10%;
    width: 29%;
    height: 80px;
    font-size: large;
    float: left;
    border-bottom-left-radius: 10px;
    font-size: small;
    border-color: rgb(167, 132, 86);
    border-left-style: inset;
    border-left-width: 3px;
    border-bottom-left-radius: 10px;
    border-bottom-style: inset;
    border-bottom-width: 3px;
    border-right-style: inset;
    border-right-width: 3px;
    }

#turnCounter    {background-color:bisque;
    text-align: center;
    margin: auto;
    width: 20%;
    padding-bottom: 5%;
    font-size:2rem
    }

h2  {
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: smaller;
    color:saddlebrown;
    font-weight: bold;
    text-transform: uppercase;
    align-content: center;
    text-align: center;
    margin: 3%;
    line-height: 15px;  
    }
    

#itemList   {background-color:bisque;
    text-align: center;
    font-size: small;
    margin: auto;
    width: 69%;
    float: right;
    height: 80px;
    border-color: rgb(167, 132, 86);
    border-right-style: inset;
    border-right-width: 3px;
    border-bottom-right-radius: 10px;
    border-bottom-style: inset;
    border-bottom-width: 3px;
    margin-left: -2px;
    }

h3  {
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    color:saddlebrown;
    font-weight: bold;
    text-transform: uppercase;
    padding-left: 5%;
    padding-right: 5%;
    text-align: center;
    margin: 3%;
    }

h4 {
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 200%;
    color:saddlebrown;
    font-weight: bold;
    text-transform: uppercase;
    padding-left: 5%;
    padding-right: 5%;
    text-align: center;
    }

#content {
    min-height: calc(100vh - 375.758px);
    width: 97%;
    align-content: center;
    margin: auto;
    }

.bar {
    position: relative;
    width: 100%;
    height: 150px;
    background-image: linear-gradient(to top, #755c3e 0%, #d2b48c 100%);
    margin-top: 250px;
    margin-bottom: -200px;
    border-top: 1px solid rgba(210, 180, 140, 0.3);
    -webkit-background-clip: padding-box;
        background-clip: padding-box; 

    z-index: -1;
    }

svg {
    
    margin-top: -40px;
    z-index: 1;
    }

footer {
    background-image: linear-gradient(to top, #209cff 0%, #68e0cf 100%);
    
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    margin-top: -15px;
    height: 220px;
    }

#socials {
    text-align: center;
    margin: auto;
    clear: both
    }

#credit {
    background-color:rgb(255, 255, 255);
    width: 50%;
    text-align: center; 
    margin: auto;
    font-weight: bold;
    font-size: 40%;
    text-transform: uppercase;
    align-content: center;
    border-style:hidden;
    border-radius: 10px;
    box-shadow: 5px 5px 15px rgba(0,0,0,.3);
    clear: both;
    padding: 2px;
    }

#credit a:hover {
    color: rgb(255, 0, 221)
    }

a {
    text-decoration: none;
    }
    

#snackbarChest {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: large;
    visibility: hidden;
    width: 50%;
    background-color: #87fd91;
    color: #000000;
    text-align: center; 
    border-style: solid;
    border-color: green;
    border-radius: 10px; 
    padding: 10px;
    position: fixed;
    z-index: 1;
    left: 23%;
    bottom: 70px;
    align-content: center;
  }
        
#snackbarChest.show {
    visibility: visible;
    /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
    However, delay the fade out process for 2.5 seconds */
    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
    animation: fadein 0.5s, fadeout 0.5s 2.5s;
  }

#snackbarGolfClubs {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: large;
    visibility: hidden;
    width: 50%;
    background-color: #87fd91;
    color: #000000;
    text-align: center; 
    border-style: solid;
    border-color: green;
    border-radius: 10px; 
    padding: 10px;
    position: fixed;
    z-index: 1;
    left: 23%;
    bottom: 70px;
    align-content: center;
  }
        
#snackbarGolfClubs.show {
    visibility: visible;
    /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
    However, delay the fade out process for 2.5 seconds */
    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
    animation: fadein 0.5s, fadeout 0.5s 2.5s;
  }

  #snackbarSurfboard {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: large;
    visibility: hidden;
    width: 50%;
    background-color: #87fd91;
    color: #000000;
    text-align: center; 
    border-style: solid;
    border-color: green;
    border-radius: 10px; 
    padding: 10px;
    position: fixed;
    z-index: 1;
    left: 23%;
    bottom: 70px;
    align-content: center;
  }
        
#snackbarSurfboard.show {
    visibility: visible;
    /* Add animation: Take 0.5 seconds to fade in and out the snackbar.
    However, delay the fade out process for 2.5 seconds */
    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
    animation: fadein 0.5s, fadeout 0.5s 2.5s;
  }
  
/* Animations to fade the snackbar in and out */
@-webkit-keyframes fadein {
    from {bottom: 0; opacity: 0;}
    to {bottom: 70px; opacity: 1;}
  }
  
@keyframes fadein {
from {bottom: 0; opacity: 0;}
    to {bottom: 70px; opacity: 1;}
  }
  
@-webkit-keyframes fadeout {
    from {bottom: 70px; opacity: 1;}
    to {bottom: 0; opacity: 0;}
  }
  
@keyframes fadeout {
    from {bottom: 70px; opacity: 1;}
    to {bottom: 0; opacity: 0;}
  }

